--- a/customer-churn-prediction/file.ipynb
+++ b/customer-churn-prediction/file.ipynb
@@ -549,7 +549,8 @@
     }
    ],
    "source": [
-    "sns.countplot(x=\"Churn\",data=df,hue='InternetService')\n"
+    "sns.countplot(x=\"Churn\",data=df,hue='InternetService')\n",
+    "##continued"
    ]
   },
   {
