--- a/customer-churn-prediction/file.ipynb
+++ b/customer-churn-prediction/file.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-07-25 11:07:24.301860: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2022-07-25 11:07:24.335121: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2022-07-25 11:07:24.335141: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -422,21 +432,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['gender', 'SeniorCitizen', 'Partner', 'Dependents', 'tenure',\n",
-       "       'PhoneService', 'MultipleLines', 'InternetService', 'OnlineSecurity',\n",
-       "       'OnlineBackup', 'DeviceProtection', 'TechSupport', 'StreamingTV',\n",
-       "       'StreamingMovies', 'Contract', 'PaperlessBilling', 'PaymentMethod',\n",
-       "       'MonthlyCharges', 'TotalCharges', 'Churn'],\n",
+       "Index(['customerID', 'gender', 'SeniorCitizen', 'Partner', 'Dependents',\n",
+       "       'tenure', 'PhoneService', 'MultipleLines', 'InternetService',\n",
+       "       'OnlineSecurity', 'OnlineBackup', 'DeviceProtection', 'TechSupport',\n",
+       "       'StreamingTV', 'StreamingMovies', 'Contract', 'PaperlessBilling',\n",
+       "       'PaymentMethod', 'MonthlyCharges', 'TotalCharges', 'Churn'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +499,7 @@
        "<AxesSubplot:xlabel='Churn', ylabel='count'>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -522,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +541,7 @@
        "<AxesSubplot:xlabel='Churn', ylabel='count'>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
