--- a/P1/file.ipynb
+++ b/P1/file.ipynb
@@ -417,6 +417,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['yes', 'no'], dtype=object)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['higher'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -1054,6 +1074,257 @@
    "metadata": {},
    "source": [
     "#### From above we can figure that G1 and G2 are highly correlated. (But G2>G1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>Medu</th>\n",
+       "      <th>Fedu</th>\n",
+       "      <th>traveltime</th>\n",
+       "      <th>studytime</th>\n",
+       "      <th>failures</th>\n",
+       "      <th>famrel</th>\n",
+       "      <th>freetime</th>\n",
+       "      <th>goout</th>\n",
+       "      <th>Dalc</th>\n",
+       "      <th>Walc</th>\n",
+       "      <th>health</th>\n",
+       "      <th>absences</th>\n",
+       "      <th>G1</th>\n",
+       "      <th>G2</th>\n",
+       "      <th>G3</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>higher</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>no</th>\n",
+       "      <td>17.850000</td>\n",
+       "      <td>1.950</td>\n",
+       "      <td>1.700000</td>\n",
+       "      <td>1.700000</td>\n",
+       "      <td>1.400000</td>\n",
+       "      <td>1.300000</td>\n",
+       "      <td>3.850000</td>\n",
+       "      <td>3.500000</td>\n",
+       "      <td>3.300000</td>\n",
+       "      <td>1.750000</td>\n",
+       "      <td>2.850000</td>\n",
+       "      <td>3.650000</td>\n",
+       "      <td>7.650000</td>\n",
+       "      <td>8.350000</td>\n",
+       "      <td>7.800000</td>\n",
+       "      <td>6.800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>yes</th>\n",
+       "      <td>16.634667</td>\n",
+       "      <td>2.792</td>\n",
+       "      <td>2.565333</td>\n",
+       "      <td>1.434667</td>\n",
+       "      <td>2.069333</td>\n",
+       "      <td>0.282667</td>\n",
+       "      <td>3.949333</td>\n",
+       "      <td>3.221333</td>\n",
+       "      <td>3.098667</td>\n",
+       "      <td>1.466667</td>\n",
+       "      <td>2.261333</td>\n",
+       "      <td>3.549333</td>\n",
+       "      <td>5.605333</td>\n",
+       "      <td>11.045333</td>\n",
+       "      <td>10.869333</td>\n",
+       "      <td>10.608</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              age   Medu      Fedu  traveltime  studytime  failures    famrel  \\\n",
+       "higher                                                                          \n",
+       "no      17.850000  1.950  1.700000    1.700000   1.400000  1.300000  3.850000   \n",
+       "yes     16.634667  2.792  2.565333    1.434667   2.069333  0.282667  3.949333   \n",
+       "\n",
+       "        freetime     goout      Dalc      Walc    health  absences         G1  \\\n",
+       "higher                                                                          \n",
+       "no      3.500000  3.300000  1.750000  2.850000  3.650000  7.650000   8.350000   \n",
+       "yes     3.221333  3.098667  1.466667  2.261333  3.549333  5.605333  11.045333   \n",
+       "\n",
+       "               G2      G3  \n",
+       "higher                     \n",
+       "no       7.800000   6.800  \n",
+       "yes     10.869333  10.608  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.groupby('higher').mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "higher\n",
+       "no      6.800\n",
+       "yes    10.608\n",
+       "Name: G3, dtype: float64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.groupby('higher').mean()['G3']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Standard Deviation and Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "higher\n",
+       "no     4.829732\n",
+       "yes    4.493422\n",
+       "Name: G3, dtype: float64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.groupby('higher')['G3'].std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "higher\n",
+       "no     4.829732\n",
+       "yes    4.493422\n",
+       "Name: G3, dtype: float64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.groupby('higher')['G3'].std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.415189873417722"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['G3'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "higher\n",
+       "no      20\n",
+       "yes    375\n",
+       "Name: G3, dtype: int64"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.groupby('higher').count()['G3']"
    ]
   },
   {
