--- a/P1/file.ipynb
+++ b/P1/file.ipynb
@@ -2,14 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "from IPython.display import Image\n"
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
@@ -1031,6 +1030,18 @@
    ],
    "source": [
     "data.corr()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### You know how to use the following:\n",
+    "### corr() to find see correlation groupby() with mean(), count(), or std()\n",
+    "\n",
+    "#### Correlation is an easy measure to find insights that are actionable.\n",
+    "#### Use corr() and only show G3, as that is the row we are interested in.\n",
+    "#### Notice: G1 and G2 are highly correlated, but they are not intented to be used"
    ]
   },
   {
