--- a/P1/00 - Project - Your First Data Science Project.ipynb
+++ b/P1/00 - Project - Your First Data Science Project.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "id": "ded750a9",
    "metadata": {},
    "outputs": [],
@@ -70,12 +70,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "id": "a518fd10",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('student-mat.csv')"
+    "data = pd.read_csv('./Files/student-mat.csv')"
    ]
   },
   {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "id": "03044723",
    "metadata": {},
    "outputs": [
@@ -281,7 +281,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "id": "f1f31885",
    "metadata": {},
    "outputs": [
@@ -312,7 +312,7 @@
        "395"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "id": "cc2db889",
    "metadata": {},
    "outputs": [
@@ -397,7 +397,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "id": "44075d74",
    "metadata": {},
    "outputs": [
@@ -462,7 +462,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "id": "a2f1e69a",
    "metadata": {},
    "outputs": [
@@ -547,7 +547,7 @@
        "Name: G3, dtype: float64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "id": "941b5132",
    "metadata": {},
    "outputs": [
@@ -583,7 +583,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,417 +607,91 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a2684b96",
+   "metadata": {},
+   "source": [
+    "## TEST THE FEATURE OF COLUMN {higher}"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "id": "9a5b5a7a",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>school</th>\n",
-       "      <th>sex</th>\n",
-       "      <th>age</th>\n",
-       "      <th>address</th>\n",
-       "      <th>famsize</th>\n",
-       "      <th>Pstatus</th>\n",
-       "      <th>Medu</th>\n",
-       "      <th>Fedu</th>\n",
-       "      <th>Mjob</th>\n",
-       "      <th>Fjob</th>\n",
-       "      <th>...</th>\n",
-       "      <th>famrel</th>\n",
-       "      <th>freetime</th>\n",
-       "      <th>goout</th>\n",
-       "      <th>Dalc</th>\n",
-       "      <th>Walc</th>\n",
-       "      <th>health</th>\n",
-       "      <th>absences</th>\n",
-       "      <th>G1</th>\n",
-       "      <th>G2</th>\n",
-       "      <th>G3</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>GP</td>\n",
-       "      <td>F</td>\n",
-       "      <td>18</td>\n",
-       "      <td>U</td>\n",
-       "      <td>GT3</td>\n",
-       "      <td>A</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>at_home</td>\n",
-       "      <td>teacher</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>6</td>\n",
-       "      <td>5</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>GP</td>\n",
-       "      <td>F</td>\n",
-       "      <td>17</td>\n",
-       "      <td>U</td>\n",
-       "      <td>GT3</td>\n",
-       "      <td>T</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>at_home</td>\n",
-       "      <td>other</td>\n",
-       "      <td>...</td>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>GP</td>\n",
-       "      <td>F</td>\n",
-       "      <td>15</td>\n",
-       "      <td>U</td>\n",
-       "      <td>LE3</td>\n",
-       "      <td>T</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>at_home</td>\n",
-       "      <td>other</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>10</td>\n",
-       "      <td>7</td>\n",
-       "      <td>8</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>GP</td>\n",
-       "      <td>F</td>\n",
-       "      <td>15</td>\n",
-       "      <td>U</td>\n",
-       "      <td>GT3</td>\n",
-       "      <td>T</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>health</td>\n",
-       "      <td>services</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>15</td>\n",
-       "      <td>14</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>GP</td>\n",
-       "      <td>F</td>\n",
-       "      <td>16</td>\n",
-       "      <td>U</td>\n",
-       "      <td>GT3</td>\n",
-       "      <td>T</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>other</td>\n",
-       "      <td>other</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "      <td>4</td>\n",
-       "      <td>6</td>\n",
-       "      <td>10</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>390</th>\n",
-       "      <td>MS</td>\n",
-       "      <td>M</td>\n",
-       "      <td>20</td>\n",
-       "      <td>U</td>\n",
-       "      <td>LE3</td>\n",
-       "      <td>A</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>services</td>\n",
-       "      <td>services</td>\n",
-       "      <td>...</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>5</td>\n",
-       "      <td>4</td>\n",
-       "      <td>11</td>\n",
-       "      <td>9</td>\n",
-       "      <td>9</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>391</th>\n",
-       "      <td>MS</td>\n",
-       "      <td>M</td>\n",
-       "      <td>17</td>\n",
-       "      <td>U</td>\n",
-       "      <td>LE3</td>\n",
-       "      <td>T</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>services</td>\n",
-       "      <td>services</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>14</td>\n",
-       "      <td>16</td>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>392</th>\n",
-       "      <td>MS</td>\n",
-       "      <td>M</td>\n",
-       "      <td>21</td>\n",
-       "      <td>R</td>\n",
-       "      <td>GT3</td>\n",
-       "      <td>T</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>other</td>\n",
-       "      <td>other</td>\n",
-       "      <td>...</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>10</td>\n",
-       "      <td>8</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>393</th>\n",
-       "      <td>MS</td>\n",
-       "      <td>M</td>\n",
-       "      <td>18</td>\n",
-       "      <td>R</td>\n",
-       "      <td>LE3</td>\n",
-       "      <td>T</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>services</td>\n",
-       "      <td>other</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>11</td>\n",
-       "      <td>12</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>394</th>\n",
-       "      <td>MS</td>\n",
-       "      <td>M</td>\n",
-       "      <td>19</td>\n",
-       "      <td>U</td>\n",
-       "      <td>LE3</td>\n",
-       "      <td>T</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>other</td>\n",
-       "      <td>at_home</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>8</td>\n",
-       "      <td>9</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>395 rows × 33 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "    school sex  age address famsize Pstatus  Medu  Fedu      Mjob      Fjob  \\\n",
-       "0       GP   F   18       U     GT3       A     4     4   at_home   teacher   \n",
-       "1       GP   F   17       U     GT3       T     1     1   at_home     other   \n",
-       "2       GP   F   15       U     LE3       T     1     1   at_home     other   \n",
-       "3       GP   F   15       U     GT3       T     4     2    health  services   \n",
-       "4       GP   F   16       U     GT3       T     3     3     other     other   \n",
-       "..     ...  ..  ...     ...     ...     ...   ...   ...       ...       ...   \n",
-       "390     MS   M   20       U     LE3       A     2     2  services  services   \n",
-       "391     MS   M   17       U     LE3       T     3     1  services  services   \n",
-       "392     MS   M   21       R     GT3       T     1     1     other     other   \n",
-       "393     MS   M   18       R     LE3       T     3     2  services     other   \n",
-       "394     MS   M   19       U     LE3       T     1     1     other   at_home   \n",
-       "\n",
-       "     ... famrel freetime  goout  Dalc  Walc health absences  G1  G2  G3  \n",
-       "0    ...      4        3      4     1     1      3        6   5   6   6  \n",
-       "1    ...      5        3      3     1     1      3        4   5   5   6  \n",
-       "2    ...      4        3      2     2     3      3       10   7   8  10  \n",
-       "3    ...      3        2      2     1     1      5        2  15  14  15  \n",
-       "4    ...      4        3      2     1     2      5        4   6  10  10  \n",
-       "..   ...    ...      ...    ...   ...   ...    ...      ...  ..  ..  ..  \n",
-       "390  ...      5        5      4     4     5      4       11   9   9   9  \n",
-       "391  ...      2        4      5     3     4      2        3  14  16  16  \n",
-       "392  ...      5        5      3     3     3      3        3  10   8   7  \n",
-       "393  ...      4        4      1     3     4      5        0  11  12  10  \n",
-       "394  ...      3        2      3     3     3      5        5   8   9   9  \n",
-       "\n",
-       "[395 rows x 33 columns]"
+       "higher\n",
+       "no      6.800\n",
+       "yes    10.608\n",
+       "Name: G3, dtype: float64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "g=data.groupby(['freetime','G3'])\n"
+    "data.groupby('higher')['G3'].mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "id": "b45b14af",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "freetime\n",
-       "1     19\n",
-       "2     64\n",
-       "3    157\n",
-       "4    115\n",
-       "5     40\n",
+       "higher\n",
+       "no      20\n",
+       "yes    375\n",
        "Name: G3, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.groupby('freetime')['G3'].count()"
+    "data.groupby('higher')['G3'].count()\n",
+    "# gives the conut of G3 in different higher given\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "id": "13f7b97b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "freetime\n",
-       "1    4.752346\n",
-       "2    4.219663\n",
-       "3    4.794920\n",
-       "4    4.330757\n",
-       "5    4.619912\n",
+       "higher\n",
+       "no     4.829732\n",
+       "yes    4.493422\n",
        "Name: G3, dtype: float64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.groupby('freetime')['G3'].std()"
+    "data.groupby('higher')['G3'].std()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "754e9c74",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1031,22 +705,6 @@
     "    - Convey credibility in report\n",
     "    - What is realistic within possibilities (including a budget)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f0740389",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a0f14a7c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
