--- a/P1/introone.ipynb
+++ b/P1/introone.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -384,13 +384,13 @@
        "[395 rows x 33 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data= pd.read_csv(\"student-mat.csv\")\n",
+    "data= pd.read_csv(\"./Files/student-mat.csv\")\n",
     "data"
    ]
   },
