--- a/P1/03 - Lesson - Web Scraping.ipynb
+++ b/P1/03 - Lesson - Web Scraping.ipynb
@@ -64,17 +64,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "075948a2",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "import lxml\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "38226d78",
    "metadata": {},
    "outputs": [
